--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   hive_flutter: ^1.1.0
   font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.1
+  fl_chart: ^0.50.1
 
 dev_dependencies:
   flutter_test:
