--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.1
   fl_chart: ^0.50.1
+  line_icons: ^2.0.1
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
