--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,4 +31,12 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+     <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+    </queries>
+     <!-- Permissions options for the 'internet' group -->
+    <uses-permission android:name="android.permission.Internet" />
 </manifest>
