--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chrisstayte.cashew">
-   <application
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <application
         android:label="cashew"
         android:name="${applicationName}"
         android:icon="@mipmap/cashew">
@@ -31,12 +30,4 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-     <queries>
-        <intent>
-            <action android:name="android.intent.action.VIEW" />
-            <data android:scheme="https" />
-        </intent>
-    </queries>
-     <!-- Permissions options for the 'internet' group -->
-    <uses-permission android:name="android.permission.Internet" />
 </manifest>
